Fixed upload page bug (following the layout refactor to insert the side panel) Control bar is now properly visible when in fullscreen

--- a/yo/app/styles/main.css
+++ b/yo/app/styles/main.css
@@ -93,12 +93,14 @@ textarea.form-control {
 
 @media screen and (min-height: 800px) {
     .main-panel {
+        min-width: 600px;
         max-width: 750px;
     }
 }
 
 @media screen and (min-height: 900px) {
     .main-panel {
+        min-width: 750px;
         max-width: 800px;
     }
 }
@@ -111,6 +113,7 @@ textarea.form-control {
 
 @media screen and (max-width: 1020px) {
     .main-panel {
+        min-width: 800px;
         max-width: 900px;
     }
 }
