--- a/yo/app/styles/video.css
+++ b/yo/app/styles/video.css
@@ -42,6 +42,11 @@
   background-color: rgba(0, 0, 0, 0.9);
 }
 
+/* I don't know of any way to update the controls-container class directly based on a javascript variable */
+.videogular .controls-container-fullscreen > div:first-child{
+  margin-top: 0;
+}
+
 .editing-tools {
   	margin-top: 20px;
   	margin-bottom: 20px;
